# graniteR

./: .Rbuildignore  .Rprofile  .gitignore  AUTOML_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  DEVELOPMENT.md  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  SETUP.md  _pkgdown.yml  check_output.txt  check_quick.txt  idea.md  interface.md  pyproject.toml  setup_python.sh
.github/: AUTOGLUON_COMPARISON.md  CREATE_ISSUES.sh  DEVELOPMENT.md  SETUP.md
R/: auto_classify.R  classifier.R  data.R  embed.R  ensemble.R  graniteR-package.R  meta_features.R  model.R  moe_classifier.R  save_load_s3.R  utils.R  zzz.R
data/: clf_moe_example.rda  emotion_full.rda  emotion_sample.rda  hate_speech_full.rda  hate_speech_sample.rda  malicious_prompts_sample.rda  sentiment_imdb_sample.rda
data-raw/: DATASET.R  download_dataset.py  download_full_dataset.R
dev/: package-quality-audit.md
examples/: README.md  basic_example.R  multiclass_classification.R
inst/: PACKAGE_QUALITY.md  PERFORMANCE.md  agent-quality.md  package-quality.md  style-quality.md
man/: auto_classify.Rd  build_ensemble.Rd  build_ensemble_from_results.Rd  classifier.Rd  clf_moe_example.Rd  compute_meta_features.Rd  embed.Rd  emotion_full.Rd  emotion_sample.Rd  evaluate_candidates_with_budget.Rd  evaluate_classifier.Rd  evaluate_moe_classifier.Rd  generate_candidate_space.Rd  graniteR-package.Rd  granite_check_system.Rd  granite_classifier.Rd  granite_embed.Rd  granite_model.Rd  granite_predict.Rd  granite_tokenizer.Rd  granite_train.Rd  hate_speech_full.Rd  hate_speech_sample.Rd  (+25 more)
(+38 files in other folders)
