[project]
name = "graniteR-python"
version = "0.1.0"
description = "Python dependencies for graniteR package"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
